--- a/package.json
+++ b/package.json
@@ -65,9 +65,9 @@
     "graphql-tag": "^2.10.3",
     "mat-table-exporter": "^9.0.0",
     "ng2-charts": "^2.3.0",
-    "ngx-polygloat": "0.0.2",
+    "ngx-polygloat": "../polygloat/clients/angular/dist/ngx-polygloat",
     "oidc-client": "^1.10.1",
-    "polygloat": "0.0.5",
+    "polygloat": "file:../polygloat/polygloat-js",
     "rxjs": "~6.5.4",
     "save": "^2.4.0",
     "tinycolor2": "^1.4.1",
